fix css layout problems

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 html {
   height: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   height: 100%;
-  width: 100vw;
+  width: 100%;
+  /* overflow: hidden; */
+  position: relative;
+  /* box-sizing: content-box; */
 }
 
 .App {
   text-align: center;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -31,6 +37,7 @@ body {
 
 .navButton {
   font-size: x-large;
+  transform: scale(1.5);
   border: none;
   background: transparent;
   color: white;
@@ -89,7 +96,7 @@ body {
 .inputComponent {
   background-color: rgba(255, 255, 255, 0.384);
   border-radius: 16px;
-  padding: 30px;
+  padding: 15px 30px 30px 30px;
   width: 90%;
   color: whitesmoke;
   font-size: 2.5rem;
@@ -103,6 +110,7 @@ body {
 .inputDescription {
   text-align: left;
   margin: 0;
+  /* font-weight: bold; */
 }
 
 ul {
